changing backgrounds and layouts

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>ERAWEBAPP</title>
+        <title>ERA-WEB-APP</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -38,6 +38,6 @@
                 <!-- / Material Design Spinner -->
             </div>
         </fuse-splash-screen>
-        <app-root></app-root>
+        <app-root class="main-root"></app-root>
     </body>
 </html>
