fixed modal showed twice

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
         <title>ERA Application</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="google-site-verification"
+            content="7YyWSmnM1hjGn5w55e8C3EyJ5yX5MBbD5P4MW_OshHs"
+        />
 
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link href="assets/icons/meteocons/style.css" rel="stylesheet" />
