--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="google-site-verification" content="7YyWSmnM1hjGn5w55e8C3EyJ5yX5MBbD5P4MW_OshHs" />
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
     <link href="assets/icons/meteocons/style.css" rel="stylesheet" />
     <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet" />
